# cosmicraysim

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
app/: bristol_g4sim.cc  bristol_trackfit.cc  cosmicraysim.cc  pumas_example.cc
app/chance/: chance_g4sim.cc  chance_trackfit.cc
app/pumas/: pumas_example.cc
cluster/: README.md  getcosmicraysim.sh  make_temp_scratch.sh  runscript.sh  runscript_d25_s0p5_laptop.sh  setup.sh  setupgeant4.sh  subscript.sh
cmake/: setup.sh.in
data/: global.db  global.db~  init_vis.mac
data/awe/: muontomographydetector.geo  muontomographydetector_second.geo
data/chance/: defaultdetectorsystem.geo
data/detectors/: DETECTOR.db~  default.db  detector_list.db  yes
data/dsc/: vsc24.geo
data/fluxes/: cry.db  cry.db~  shukla.db  shukla.db~
data/hybrid/: muontomographydetector.geo
data/materials/: #material_list.db#  geant4_materials.db  material_list.db  material_list.db~
docs/: Doxyfile  dbinputs.md~  index.md  main.md  overview.md
docs/user-guide/: addingdetectors.md  addingprocessors.md  addingtriggers.md  choosingflux.md  choosingphysics.md  dbinputs.md  editingtables.md  gettingstarted.md  makinggeometry.md  usingtheframework.md
macros/: atmosphere_transport.geo  cosmicdetector.geo  detector.geo  detector_ca_tunnel.geo  detector_ca_tunnel_d25m_s0p5m.geo  detector_ca_tunnel_d25m_s1m.geo  detector_ca_tunnel_d50m_s0p5m.geo  detector_ca_tunnel_d50m_s1m.geo  detector_ca_tunnel_d75m_s0p5m.geo  detector_ca_tunnel_d75m_s1m.geo  detector_ca_tunnel_opensky.geo  detector_ca_tunnel_vertical.geo  detector_ca_wall_voids.geo  detector_ca_wall_voids_75m.geo  detector_opensky.geo  detector_wall_voids_25m.geo  detector_wall_voids_50m.geo  dettest.geo  driftdraw.geo  drum.geo  drumtest.geo  geometry.geo  steelblock.geo  test.geo  tunnel.geo  vis.mac  vsc.geo
macros/ca/: ca_air_tunnels.geo  ca_detector_system.geo  ca_source_flux.geo  ca_variables_d25_s0p5.geo  ca_variables_d25_s1.geo  ca_variables_d50_s0p5.geo  ca_variables_d50_s1.geo  ca_variables_d75_s0p5.geo  ca_variables_d75_s1.geo  ca_water_tunnels.geo  ca_world_air.geo  ca_world_rock.geo
macros/chance/: target.geo
macros/chance/trackfit_validation/: leadblock.geo  onlyrpcdetector.geo
macros/cosmos/: cosmos_ground.geo
src/action/: CosmicActionInitialization.cc  CosmicActionInitialization.hh  CosmicAnalysis.hh  CosmicRun.cc  CosmicRun.hh  CosmicRunAction.cc  CosmicRunAction.hh  CosmicStackingAction.cc  CosmicStackingAction.hh
src/analysis/: Analysis.cc  Analysis.hh  VDetector.hh  VFluxProcessor.hh  VProcessor.hh  VTrigger.hh
src/chance/: AWEDriftChamber.cc  AWEDriftChamber.hh  AWEDriftSD.cc  AWEDriftSD.hh  BristolPoCAFitter.cc  BristolPoCAFitter.hh  BristolRPCPlane.cc  BristolRPCPlane.hh  BristolRPCSD.cc  HybridMuonTomographyDetector.cc  HybridMuonTomographyDetector.hh
src/cry/: CRYAbsFunction.cc  CRYAbsParameter.cc  CRYCosLatitudeFunction.cc  CRYFunctionDict.cc  CRYFunctionDict.h  CRYParticle.cc  CRYParticle.h  CRYPdf.cc  CRYPrimarySpectrumFunction.cc  CRYSetup.cc  CRYSetup.h  CRYWeightFunc.cc
src/db/: DB.cc  DB.hh  DBEvaluator.cc  DBEvaluator.hh  DBLink.cc  DBLink.hh  DBTable.cc  DBTable.hh  DBTable_LinkDef.h  ROOTHeaders.hh  ReadFile.cc  ReadFile.hh  json.cc  json.hh
src/flux/: CRYPrimaryGenerator.cc  CRYPrimaryGenerator.hh  PrimaryGeneratorFactory.cc  PrimaryGeneratorFactory.hh  PumasBackwardsGenerator.cc  PumasBackwardsGenerator.hh  ShuklaPrimaryGenerator.cc  ShuklaPrimaryGenerator.hh
src/geo/: DryStorageCask0.cc  DryStorageCask0.hh  GeoBox.cc  GeoBox.hh  GeoComposite.hh  GeoManager.cc  GeoManager.hh  GeoObject.cc  GeoObject.hh  GeoSolid.cc  GeoSolid.hh  GeoTubs.cc  GeoTubs.hh  GeoUtils.cc  GeoUtils.hh
src/geo/awemuontom/: AWEMuonTomographyDetector.cc  AWEMuonTomographyDetector.hh  AWEMuonTomographyDetectorSecond.cc  AWEMuonTomographyDetectorSecond.hh
src/geo/cadmesh/: GeoCADMesh.cc  GeoCADMesh.cc~  GeoCADMesh.hh
src/geo/chance/: AWEDriftChamber.cc  AWEDriftChamber.hh
src/geo/dsc/: DryStorageCask_VSC24.cc  DryStorageCask_VSC24.hh
src/geo/hybrid/: HybridMuonTomographyDetector.cc  HybridMuonTomographyDetector.hh
src/geo/iso/: ISOSpacingTest.cc  ISOSpacingTest.hh
src/geo/nuclearwaste/: DryStorageCask_VSC24.cc  LargeSteelDrum.cc  LargeSteelDrum.hh  SmallSteelDrum.cc  SmallSteelDrum.hh
src/geo/simple/: GeoBox.cc  GeoBox.hh  GeoCone.cc  GeoCone.hh  GeoCutTubs.cc  GeoCutTubs.hh  GeoEllipticalTube.cc  GeoEllipticalTube.hh  GeoEllipticalTunnel.cc  GeoEllipticalTunnel.hh  GeoPara.cc  GeoPara.hh  GeoTubs.cc  GeoTubs.hh
src/materials/: MaterialManager.cc  MaterialManager.hh
src/physics/: DefaultPhysics.cc  DefaultPhysics.hh  PhysicsFactory.cc  PhysicsFactory.hh
src/processors/: ProcessorFactory.cc  ProcessorFactory.hh  TrueMuonPoCAProcessor.cc  TrueMuonPoCAProcessor.hh
src/pumas/: PUMASInterface.hh
src/sd/: AWEDriftSD.cc  AWEDriftSD.hh  B3Hit.cc  B3Hits.hh  BristolRPC.cc  BristolRPC.hh  BristolRPCSD.cc  BristolRPCSD.hh  DetectorConstruction.cc  DetectorConstruction.hh  DetectorManager.cc  DetectorManager.hh  DetectorMessenger.cc  DetectorMessenger.hh  DetectorObject.cc  DetectorObject.hh  DriftHit.cc  DriftHit.hh  LongDriftSD.cc  LongDriftSD.hh  MultiDetector.cc  MultiDetector.hh  NeutronSD.cc  NeutronSD.hh  ScintillatorHit.cc  ScintillatorHit.hh  ScintillatorSD.cc  ScintillatorSD.hh  SimpleScintillatorSD.cc  SimpleScintillatorSD.hh  TargetMuonInOutTracker.cc  TargetMuonInOutTracker.hh  TrueInTracker.cc  TrueInTracker.hh  TrueMuonTracker.cc  TrueMuonTracker.hh  TrueParticleTracker.cc  TrueParticleTracker.hh
src/tomography/: PoCAUtils.cc  PoCAUtils.hh
src/trackfitting/: BristolPoCAFitter.cc  BristolPoCAFitter.hh  TrackFitter.cc  TrackFitter.hh
src/trigger/: CoincidenceTrigger.cc  CoincidenceTrigger.hh  SimpleTrigger.cc  SimpleTrigger.hh  TriggerManager.cc  TriggerManager.hh
